# http-server

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  request.rs  response.rs
src/methods/: mod.rs
src/os/: linux.rs  windows.rs
src/os/windows/: core.rs  util.rs  wsa.rs
src/os/windows/utils/: handle.rs  proc.rs
src/request/: mod.rs
