[package]
name = "http-server"
version = "0.1.0"
authors = ["Dhs92 <forehand.alex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-pool = {git = "https://github.com/Dhs92/thread_pool/", branch = "main"}
log = "*"
simple-logging = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
bincode = "1.3.1"
winapi = {version = "0.3.9", features = ["winbase", "winuser", "impl-default", "errhandlingapi", "securitybaseapi", "handleapi"]}